--- a/src/Components/FeaturedInfo/FeaturedInfo.scss
+++ b/src/Components/FeaturedInfo/FeaturedInfo.scss
@@ -2,7 +2,7 @@
     padding: 20px 25px;
     box-sizing: border-box;
     border-radius: 20px;
-    width: 221px;
+    flex: 1;
     height: 120px;
     position: relative;
     .icon-top{
