--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -30,6 +30,7 @@
             font-style: normal;
             font-weight: 400;
             font-size: 18px;
+            cursor: pointer;
             line-height: 22px;
             img{
                 margin-right: 20.46px;
