--- a/src/Components/Topbar/Topbar.scss
+++ b/src/Components/Topbar/Topbar.scss
@@ -43,13 +43,16 @@
                 position: absolute;
                 right: 15px;
                 top: 9px;
+                cursor: pointer;
             }
         }
         .notification{
             border-radius: 50%;
+            cursor: pointer;
         }
         .avatar{
             img{
+                cursor: pointer;
                 border-radius: 50%;
             }
         }
