--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -5,6 +5,12 @@
     padding:20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     gap: 40px;
+    .dashboard-last{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        gap: 40px;
+    }
 }
