--- a/src/Pages/Login/Login.scss
+++ b/src/Pages/Login/Login.scss
@@ -6,7 +6,8 @@
         flex: 1.3803;
         width: 100%;
         height: 100%;
-        background-color: red;
+        background-color: black;
+        color: white;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -156,6 +157,7 @@
                             font-weight: 400;
                             font-size: 16px;
                             line-height: 19px;
+                            
                         }
                     }
                     .password-forget{
@@ -179,6 +181,7 @@
                         font-size: 16px;
                         line-height: 20px;
                         text-align: center;
+                        cursor: pointer;
                     }
                 }
             }
